--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,65 +1,65 @@
 {
-	"name": "docs",
-	"version": "2.5.7",
-	"private": true,
-	"scripts": {
-		"build": "next build --turbo",
-		"dev": "next dev --turbo",
-		"start": "next start",
-		"postinstall": "fumadocs-mdx",
-		"registry:build": "shadcn build",
-		"clean": "rm -rf .turbo .next node_modules"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^5.2.2",
-		"@radix-ui/colors": "^3.0.0",
-		"@radix-ui/react-accordion": "^1.2.12",
-		"@radix-ui/react-collapsible": "^1.1.12",
-		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-popover": "^1.1.15",
-		"@radix-ui/react-radio-group": "^1.3.8",
-		"@radix-ui/react-scroll-area": "^1.2.10",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-tabs": "^1.1.13",
-		"@stepperize/react": "workspace:*",
-		"@stepperize/solid": "workspace:*",
-		"@stepperize/vue": "workspace:*",
-		"arktype": "^2.1.22",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"fumadocs-core": "15.8.3",
-		"fumadocs-mdx": "12.0.2",
-		"fumadocs-twoslash": "3.1.8",
-		"fumadocs-typescript": "4.0.11",
-		"fumadocs-ui": "15.8.3",
-		"geist": "1.5.1",
-		"hast-util-to-jsx-runtime": "^2.3.6",
-		"lucide-react": "^0.544.0",
-		"motion": "^12.23.22",
-		"next": "15.5.4",
-		"react": "catalog:",
-		"react-dom": "catalog:",
-		"react-hook-form": "^7.64.0",
-		"shadcn": "3.4.0",
-		"shiki": "3.13.0",
-		"solid-js": "^1.9.9",
-		"tailwind-merge": "^3.3.1",
-		"ts-morph": "27.0.0",
-		"tw-animate-css": "^1.4.0",
-		"twoslash": "^0.3.4",
-		"valibot": "^1.1.0",
-		"zod": "^4.1.11"
-	},
-	"devDependencies": {
-		"@fumadocs/cli": "^1.0.2",
-		"@tailwindcss/postcss": "^4.1.14",
-		"@types/mdx": "^2.0.13",
-		"@types/node": "24.7.0",
-		"@types/react": "catalog:",
-		"@types/react-dom": "catalog:",
-		"@types/react-syntax-highlighter": "^15.5.13",
-		"postcss": "^8.5.6",
-		"tailwindcss": "^4.1.14",
-		"typescript": "catalog:"
-	}
+  "name": "docs",
+  "version": "2.5.7",
+  "private": true,
+  "scripts": {
+    "build": "next build --turbo",
+    "dev": "next dev --turbo",
+    "start": "next start",
+    "postinstall": "fumadocs-mdx",
+    "registry:build": "shadcn build",
+    "clean": "rm -rf .turbo .next node_modules"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@stepperize/react": "workspace:*",
+    "@stepperize/solid": "workspace:*",
+    "@stepperize/vue": "workspace:*",
+    "arktype": "^2.1.22",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "fumadocs-core": "15.8.3",
+    "fumadocs-mdx": "12.0.2",
+    "fumadocs-twoslash": "3.1.8",
+    "fumadocs-typescript": "4.0.11",
+    "fumadocs-ui": "15.8.3",
+    "geist": "1.5.1",
+    "hast-util-to-jsx-runtime": "^2.3.6",
+    "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
+    "next": "16.0.0-beta.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "react-hook-form": "^7.64.0",
+    "shadcn": "3.4.0",
+    "shiki": "3.13.0",
+    "solid-js": "^1.9.9",
+    "tailwind-merge": "^3.3.1",
+    "ts-morph": "27.0.0",
+    "tw-animate-css": "^1.4.0",
+    "twoslash": "^0.3.4",
+    "valibot": "^1.1.0",
+    "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "@fumadocs/cli": "^1.0.2",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "24.7.0",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "typescript": "catalog:"
+  }
 }
