--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,20 +7,17 @@
 		"dev": "next dev --turbo",
 		"start": "next start",
 		"postinstall": "fumadocs-mdx",
-		"registry:build": "shadcn build",
+		"registry:build": "npm run generate:r && shadcn build",
+		"generate:r:radix": "node scripts/generate-radix-ui-json.mjs",
+		"generate:r:base": "node scripts/generate-base-ui-json.mjs",
+		"generate:r": "node scripts/generate-radix-ui-json.mjs && node scripts/generate-base-ui-json.mjs",
 		"clean": "rm -rf .turbo .next node_modules"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
+		"radix-ui": "^1.4.3",
+		"@base-ui/react": "^1.1.0",
 		"@radix-ui/colors": "^3.0.0",
-		"@radix-ui/react-accordion": "^1.2.12",
-		"@radix-ui/react-collapsible": "^1.1.12",
-		"@radix-ui/react-label": "^2.1.8",
-		"@radix-ui/react-popover": "^1.1.15",
-		"@radix-ui/react-radio-group": "^1.3.8",
-		"@radix-ui/react-scroll-area": "^1.2.10",
-		"@radix-ui/react-slot": "^1.2.4",
-		"@radix-ui/react-tabs": "^1.1.13",
 		"@stepperize/react": "workspace:*",
 		"arktype": "^2.1.29",
 		"class-variance-authority": "^0.7.1",
