chore: update dependencies and improve code consistency
- Upgraded Biome and related dependencies to version 2.4.2.
- Updated React and related types to the latest versions for better compatibility.
- Refactored code in various components to ensure consistent import statements and formatting.
- Enhanced demo examples by simplifying import statements and improving readability.
- Updated configuration files to reflect the latest dependency changes and maintain project structure.

--- a/biome.json
+++ b/biome.json
@@ -1,40 +1,56 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
-	"files": {
-		"includes": ["**", "!.turbo", "!.next", "!.changeset", "!.pnpm-store", "!packages/react/dist"]
-	},
-	"assist": { "actions": { "source": { "organizeImports": "on" } } },
-	"formatter": {
-		"lineWidth": 120
-	},
-	"css": {
-		"parser": {
-			"tailwindDirectives": true
-		}
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"a11y": {
-				"useKeyWithClickEvents": "off"
-			},
-			"nursery": {
-				"useSortedClasses": "off"
-			},
-			"style": {
-				"useBlockStatements": "off"
-			},
-			"suspicious": {
-				"noExplicitAny": "off",
-				"noArrayIndexKey": "off",
-				"noConsole": { "level": "error", "options": { "allow": ["log"] } }
-			},
-			"correctness": {
-				"noUnusedVariables": "error",
-				"noUnusedImports": "error",
-				"useExhaustiveDependencies": "off"
-			}
-		}
-	}
+  "$schema": "https://biomejs.dev/schemas/2.4.2/schema.json",
+  "files": {
+    "includes": [
+      "**",
+      "!.turbo",
+      "!.next",
+      "!.changeset",
+      "!.pnpm-store",
+      "!packages/react/dist"
+    ]
+  },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
+  "formatter": {
+    "lineWidth": 120
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "a11y": {
+        "useKeyWithClickEvents": "off"
+      },
+      "nursery": {
+        "useSortedClasses": "off"
+      },
+      "style": {
+        "useBlockStatements": "off"
+      },
+      "suspicious": {
+        "noExplicitAny": "off",
+        "noArrayIndexKey": "off",
+        "noConsole": { "level": "error", "options": { "allow": ["log"] } }
+      },
+      "correctness": {
+        "noUnusedVariables": "error",
+        "noUnusedImports": "error",
+        "useExhaustiveDependencies": "off"
+      },
+      "complexity": {
+        "noBannedTypes": "error"
+      }
+    }
+  }
 }
