--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,14 +3,14 @@ packages:
   - packages/*
 
 catalog:
-  '@testing-library/jest-dom': ^6.9.1
-  '@testing-library/react': ^16.3.2
-  '@types/react': ^19.2.8
-  '@types/react-dom': ^19.2.3
-  jsdom: ^27.4.0
-  react: ^19.2.3
-  react-dom: ^19.2.3
+  "@testing-library/jest-dom": ^6.9.1
+  "@testing-library/react": ^16.3.2
+  "@types/react": ^19.2.14
+  "@types/react-dom": ^19.2.3
+  jsdom: ^28.1.0
+  react: ^19.2.4
+  react-dom: ^19.2.4
   terser: ^5.46.0
   tsup: ^8.5.1
   typescript: ^5.9.3
-  vitest: ^4.0.17
+  vitest: ^4.0.18
