--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,17 +1,17 @@
 {
-	"compilerOptions": {
-		"outDir": "dist",
-		"declaration": true,
-		"declarationMap": true,
-		"sourceMap": true,
-		"removeComments": false,
-		"module": "esnext",
-		"target": "esnext",
-		"moduleResolution": "bundler",
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"strict": true
-	},
-	"include": ["."],
-	"exclude": ["node_modules", "dist"]
+  "compilerOptions": {
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "removeComments": false,
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "bundler",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": true,
+  },
+  "include": ["."],
+  "exclude": ["node_modules", "dist"],
 }
